ADD new background image, animations and new elements in the first section

--- a/index.html
+++ b/index.html
@@ -11,30 +11,27 @@
     <header class="header">
         <nav class="main-nav">
             <div class="row">
-                <span class="logo-text">Christian L. Trejo</span>
-                <ul class="menu">
+                <span class="logo-text opacity-animated">Christian L. Trejo</span>
+                <ul class="menu opacity-animated">
                     <li><a href=""><span class="border-underliner">About</span></a></li>
                     <li><a href=""><span class="border-underliner">Projects</span></a></li>
                     <li><a href=""><span class="border-underliner">Skills</span></a></li>
                     <li><a href=""><span class="border-underliner">Testimonials</span></a></li>
-                    <li><a href=""><span class="border-underliner">Contact</span></a></li>
                 </ul> 
             </div>
         </nav>
         <div class="text-box">
-            <h1 class="heading-primary">
+            <h1 class="heading-primary in-left-animated">
                 <span class="heading-primary-main">
                     Coding with Style
                 </span>
                 <span class="heading-primary-sub">
                     Web Developer
                 </span>
-                <!-- 
-                <span class="heading-primary-sub">
-                    and coding with Style
-                </span>                    
-                -->
             </h1>
+            <div class="row">
+                <a class="btn btn-primary in-bottom-animated" href="">Contact Me</a>
+            </div>
         </div>
     </header>
 </body>
