UPDATE Structuring the project and creating a good grid system

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header class="header">
         <nav class="header__main-nav">
-            <span class="header__main-nav--logo-text opacity-animated">Christian L. Trejo</span>
-            <ul class="header__main-nav__menu opacity-animated">
+            <span class="header__main-nav--logo-text header--opacity-animated">Christian L. Trejo</span>
+            <ul class="header__main-nav__menu header--opacity-animated">
                 <li><a href=""><span class="header__main-nav__menu--border-underliner">About</span></a></li>
                 <li><a href=""><span class="header__main-nav__menu--border-underliner">Projects</span></a></li>
                 <li><a href=""><span class="header__main-nav__menu--border-underliner">Skills</span></a></li>
@@ -19,7 +19,7 @@
             </ul> 
         </nav>
         <div class="header__text-box">
-            <h1 class="heading-primary in-left-animated">
+            <h1 class="heading-primary heading-primary--in-left-animated">
                 <span class="heading-primary--main">
                     Coding with Style
                 </span>
@@ -27,8 +27,78 @@
                     Web Developer
                 </span>
             </h1>
-            <a class="btn btn--primary in-bottom-animated" href="">Contact Me</a>
+            <a class="btn btn--primary btn--in-bottom-animated" href="">Contact Me</a>
         </div>
     </header>
+
+
+    
+<!-- 
+
+    <section class="grid-test">
+        <div class="row">
+            <div class="col-1-of-2">
+                Col 1 of 2
+            </div>
+            <div class="col-1-of-2">
+                Col 1 of 2
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-1-of-3">
+                Col 1 of 3
+            </div>
+            <div class="col-1-of-3">
+                Col 1 of 3
+            </div>
+            <div class="col-1-of-3">
+                Col 1 of 3
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3">
+                Col 1 of 3
+            </div>
+            <div class="col-2-of-3">
+                Col 2 of 3
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+        </div>   
+        <div class="row">
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-2-of-4">
+                Col 2 of 4
+            </div>
+        </div>     
+        <div class="row">
+            <div class="col-1-of-4">
+                Col 1 of 4
+            </div>
+            <div class="col-3-of-4">
+                Col 3 of 4
+            </div>
+         </div>                               
+    </section>
+
+-->
 </body>
 </html>
