UPDATE doing changes with the background and colors

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </header>
     <main>
         <section class="about-section">
-            <div class="header-container u-center-text u-big-margin-bottom u-big-margin-top">
-                <h1 class="heading-secondary">
+            <div class="u-center-text">
+                <h1 class="heading-secondary u-big-margin-bottom u-big-margin-top">
                     What there about me&#63
                 </h1>
             </div>
-        </section>
+        </sction>
     </main>
 
     
