ADD building about-section

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Christian L. Trejo</title>
+    <title>Profile Website</title>
 </head>
 <body>
     <header class="header">
         <nav class="header__main-nav">
-            <span class="header__main-nav--logo-text header--opacity-animated">Christian L. Trejo</span>
+            <span class="header__main-nav--logo-text header--opacity-animated">Profile Website</span>
             <ul class="header__main-nav__menu header--opacity-animated">
                 <li><a href=""><span class="header__main-nav__menu--border-underliner">About me</span></a></li>
                 <li><a href=""><span class="header__main-nav__menu--border-underliner">Projects</span></a></li>
@@ -34,11 +34,29 @@
     <main>
         <section class="about-section">
             <div class="u-center-text">
-                <h1 class="heading-secondary u-big-margin-bottom u-big-margin-top">
+                <h2 class="heading-secondary u-medium-margin-bottom u-big-margin-top">
                     What there about me&#63
-                </h1>
+                </h2>
             </div>
-        </sction>
+            <div class="row">
+                <div class="col-1-of-3">
+                    <h3 class="heading-tertiary u-center-text">Hiperactive person</h3>
+                    <p class="paragraph u-center-text">
+                        I considerate I'm always doing something either with the computer as coding or trying to play with my brain solving logical problems.
+                    </p>
+                </div>
+                <div class="col-1-of-3">
+                    <h3 class="heading-tertiary u-center-text">Being autodidact</h3>
+                    <p class="paragraph u-center-text">
+                        While I have free time I'm always looking new books, courses or whatever interesting thing for learning.
+                    </p>
+                </div>
+                <div class="col-1-of-3">
+                    <h3 class="heading-tertiary u-center-text">Looking Creativity</h3>
+                    <p class="paragraph u-center-text">The creativity is basically relax, imagine, do and fun. Always I try doing the best of the best. Sure as long as It's going to stay to my reach.</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     
