--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <span class="header__main-nav--logo-text header--opacity-animated">Profile Website</span>
             <ul class="header__main-nav__menu header--opacity-animated">
                 <li><a href=""><span class="header__main-nav__menu--border-underliner">About me</span></a></li>
-                <li><a href=""><span class="header__main-nav__menu--border-underliner">Projects</span></a></li>
+                <li><a href=""><span class="header__main-nav__menu--border-underliner">Projects and courses</span></a></li>
                 <li><a href=""><span class="header__main-nav__menu--border-underliner">Skills</span></a></li>
                 <li><a href=""><span class="header__main-nav__menu--border-underliner">Testimonials</span></a></li>
             </ul> 
@@ -33,29 +33,47 @@
     </header>
     <main>
         <section class="about-section">
-            <div class="u-center-text">
-                <h2 class="heading-secondary u-medium-margin-bottom u-big-margin-top">
+            <div class="u-center-text u-small-margin-bottom">
+                <h2 class="heading-secondary u-big-margin-top">
                     What there about me&#63
                 </h2>
+                <div class="paragraph-container u-small-margin-top">
+                    <p class="paragraph">
+                        Hi, I&#39;m software engineer based in Mexico. Recently I&#39;ve worked with backend and frontend in the development world using modern technologies and frameworks.
+                        Until now I&#39;ve followed certain aspects to be better day to day.
+                    </p>
+                </div>
             </div>
             <div class="row">
                 <div class="col-1-of-3">
-                    <h3 class="heading-tertiary u-center-text">Hiperactive person</h3>
+                    <h3 class="heading-tertiary u-center-text">Proactive person</h3>
                     <p class="paragraph u-center-text">
-                        I considerate I'm always doing something either with the computer as coding or trying to play with my brain solving logical problems.
+                        I considerate I&#39;m always doing something either with the computer as coding or trying to play with my brain solving logical problems.
                     </p>
+                    <i class="u-center-text ion-ios-people icon-paragraph"></i>
                 </div>
                 <div class="col-1-of-3">
-                    <h3 class="heading-tertiary u-center-text">Being autodidact</h3>
+                    <h3 class="heading-tertiary u-center-text">Always autodidact</h3>
                     <p class="paragraph u-center-text">
-                        While I have free time I'm always looking new books, courses or whatever interesting thing for learning.
+                        While I have free time I&#39;m always looking new books, courses or whatever interesting thing for learning.
                     </p>
+                    <i class="u-center-text ion-ios-lightbulb icon-paragraph"></i>
                 </div>
                 <div class="col-1-of-3">
                     <h3 class="heading-tertiary u-center-text">Looking Creativity</h3>
-                    <p class="paragraph u-center-text">The creativity is basically relax, imagine, do and fun. Always I try doing the best of the best. Sure as long as It's going to stay to my reach.</p>
+                    <p class="paragraph u-center-text">
+                        The creativity is basically relax, imagine, do and fun. Always I try doing the best sure as long as It&#39;s going to stay to my reach.
+                    </p>
+                    <i class="u-center-text ion-ios-search-strong icon-paragraph"></i>
                 </div>
             </div>
+        </section>
+        <section class="projects-section">
+                <div class="u-center-text u-small-margin-bottom">
+                    <h2 class="heading-secondary u-big-margin-top">
+                        Projects & Courses
+                    </h2>
+                </div>
         </section>
     </main>
 
